--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,21 +1,34 @@
 security:
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         our_db_provider:
             entity:
                 class: App\Entity\User
                 property: username
+        in_memory: { memory: ~ }
+
     encoders:
         App\Entity\User:
             algorithm: bcrypt
-
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: ~
+            provider: our_db_provider
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path:   /logout
+                target: /
 
 
 
